--- a/css/animations.css
+++ b/css/animations.css
@@ -145,6 +145,11 @@ GENERAL STYLES FOR SIDE MENU
 }
 
 @media only screen and (max-width: 40em) {
+
+.nav-fillpath a.prev,
+.nav-fillpath a.next {
+    display: none;
+    }
     .cbp-spmenu a {
     display: block;
     font-size: 1.2em;
